Fix the add/delete unfocused appearance buttons (#12451)
## Summary of the Pull Request
The add/delete unfocused appearance buttons now have text on them and are closed to the `Unfocused appearance` header

## References
#11353 

## PR Checklist
* [ ] Closes #xxx
* [x] CLA signed. If not, go over [here](https://cla.opensource.microsoft.com/microsoft/Terminal) and sign the CLA
* [ ] Tests added/passed
* [ ] Documentation updated. If checked, please file a pull request on [our docs repo](https://github.com/MicrosoftDocs/terminal) and link it here: #xxx
* [ ] Schema updated.
* [x] I work here

## Validation Steps Performed
<img width="548" alt="add" src="https://user-images.githubusercontent.com/26824113/153463971-de14a68b-5ed9-4768-80f8-2a5a5a21bc9f.png">
<img width="557" alt="delete" src="https://user-images.githubusercontent.com/26824113/153463993-9a7413d4-d895-4813-a6ff-1b157f1e72f4.png">

--- a/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
@@ -141,23 +141,34 @@
                         <TextBlock x:Uid="Profile_UnfocusedAppearanceTextBlock"
                                    Style="{StaticResource TitleTextBlockStyle}" />
                         <Button x:Uid="Profile_CreateUnfocusedAppearanceButton"
-                                Margin="32,0,0,0"
+                                Margin="10,0,0,0"
                                 Click="CreateUnfocusedAppearance_Click"
                                 Style="{StaticResource BaseButtonStyle}"
                                 Visibility="{x:Bind local:Converters.InvertedBooleanToVisibility(Profile.HasUnfocusedAppearance), Mode=OneWay}">
                             <Button.Content>
-                                <FontIcon FontSize="{StaticResource StandardIconSize}"
-                                          Glyph="&#xE710;" />
+                                <StackPanel Orientation="Horizontal">
+                                    <FontIcon Margin="0,3,0,0"
+                                              FontSize="{StaticResource StandardIconSize}"
+                                              Glyph="&#xE710;" />
+                                    <TextBlock x:Uid="Profile_AddAppearanceButton"
+                                               Margin="10,0,0,0"
+                                               FontSize="{StaticResource StandardIconSize}" />
+                                </StackPanel>
                             </Button.Content>
                         </Button>
                         <Button x:Uid="Profile_DeleteUnfocusedAppearanceButton"
-                                Margin="32,0,0,0"
+                                Margin="10,0,0,0"
                                 Click="DeleteUnfocusedAppearance_Click"
                                 Style="{StaticResource BaseButtonStyle}"
                                 Visibility="{x:Bind Profile.HasUnfocusedAppearance, Mode=OneWay}">
                             <Button.Content>
-                                <FontIcon FontSize="{StaticResource StandardIconSize}"
-                                          Glyph="&#xE74D;" />
+                                <StackPanel Orientation="Horizontal">
+                                    <FontIcon FontSize="{StaticResource StandardIconSize}"
+                                              Glyph="&#xE74D;" />
+                                    <TextBlock x:Uid="Profile_DeleteAppearanceButton"
+                                               Margin="10,0,0,0"
+                                               FontSize="{StaticResource StandardIconSize}" />
+                                </StackPanel>
                             </Button.Content>
                             <Button.Resources>
                                 <ResourceDictionary>
