--- a/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
@@ -108,7 +108,7 @@
                                         Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <TextBox x:Uid="Profile_IconBox"
-                                 FontFamily="Segoe UI, Segoe MDL2 Assets"
+                                 FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
                                  IsSpellCheckEnabled="False"
                                  Style="{StaticResource TextBoxSettingStyle}"
                                  Text="{x:Bind Profile.Icon, Mode=TwoWay}" />
